fix des erreurs sonar